--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
 
 .opacidadba1{
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 9999;
+}
+
+.fondoba1{
+    background: url(..\img\ba1.jpg);
+    position: relative;
 }
